--- a/HW4/F19u-HW4prog.ipynb
+++ b/HW4/F19u-HW4prog.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "## Programming part of Homework 4 (Data Structures, Fall 2019)\n",
     "\n",
-    "## Name:\n",
-    "## Student ID Number:\n",
+    "## Name: 應耀德\n",
+    "## Student ID Number: 107590037\n",
     "\n",
     "### Programming problem \n",
     "This exercise is about to implement a ***skip list** using *linked list structure* with **Python**. Sample definitions for the list node and skip list classes are given as below. Recall the discussion in class. Each node has an entry with two attributes, *key* and *name*, where key is an integer and name is a string, as well as four links: *prev*, *next*, *up*, and *down*. In order to manage multiple lists used in the skip list, we use the built-in data structure, ***list***, of Python. The methods in the implemented skip list include:\n",
@@ -29,46 +29,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 64,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['27 luis', '8 kids', '40 kite']\n",
+      "['10 mary', '35 mars', '50 lowe', '25 john']\n",
       "-----------------------------------------------\n",
-      "(-99999,)(8,kids)(27,luis)(40,kite)(99999,)\n",
-      "(-99999,)(8,kids)(40,kite)(99999,)\n",
-      "(-99999,)(40,kite)(99999,)\n",
+      "(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(99999,)\n",
+      "(-99999,)(35,mars)(50,lowe)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
       "(-99999,)(99999,)\n",
       "Insert (88, luke)\n",
-      "(-99999,)(8,kids)(27,luis)(40,kite)(88,luke)(99999,)\n",
-      "(-99999,)(8,kids)(40,kite)(99999,)\n",
-      "(-99999,)(40,kite)(99999,)\n",
+      "(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(35,mars)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
       "(-99999,)(99999,)\n",
       "delete (40, kite)\n",
-      "(-99999,)(8,kids)(27,luis)(88,luke)(99999,)\n",
-      "(-99999,)(8,kids)(99999,)\n",
+      "Key not found in the skip lists and will not perform the deletion\n",
+      "(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(35,mars)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
       "(-99999,)(99999,)\n",
       "Insert (27, eric)\n",
-      "Key found in the skip lists and will not inert the new node\n",
-      "(-99999,)(8,kids)(27,luis)(88,luke)(99999,)\n",
-      "(-99999,)(8,kids)(99999,)\n",
+      "(-99999,)(10,mary)(25,john)(27,eric)(35,mars)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(27,eric)(35,mars)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(27,eric)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
       "(-99999,)(99999,)\n",
       "delete (45, lisa)\n",
       "Key not found in the skip lists and will not perform the deletion\n",
-      "(-99999,)(8,kids)(27,luis)(88,luke)(99999,)\n",
-      "(-99999,)(8,kids)(99999,)\n",
+      "(-99999,)(10,mary)(25,john)(27,eric)(35,mars)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(27,eric)(35,mars)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(27,eric)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
       "(-99999,)(99999,)\n",
       "delete (27, luis)\n",
-      "(-99999,)(8,kids)(88,luke)(99999,)\n",
-      "(-99999,)(8,kids)(99999,)\n",
+      "(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(35,mars)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
       "(-99999,)(99999,)\n",
       "delete (8, kids)\n",
-      "(-99999,)(88,luke)(99999,)\n",
+      "Key not found in the skip lists and will not perform the deletion\n",
+      "(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(35,mars)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
       "(-99999,)(99999,)\n",
       "delete (88, luke)\n",
+      "(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(99999,)\n",
+      "(-99999,)(35,mars)(50,lowe)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
+      "(-99999,)(50,lowe)(99999,)\n",
       "(-99999,)(99999,)\n"
      ]
     }
@@ -90,11 +126,6 @@
     "        self.down = None\n",
     "        self.next = None\n",
     "        self.prev = None\n",
-    "\n",
-    "    def __eq__(self, node):\n",
-    "        if not isinstance(node, SLnode):\n",
-    "            return False\n",
-    "        return self.key == node.key and self.item == node.item\n",
     "    \n",
     "    def getKey(self):\n",
     "        return self.key\n",
@@ -115,10 +146,10 @@
     "        return self.down\n",
     "\n",
     "    def hasNext(self):\n",
-    "        return (self.next!=None)\n",
+    "        return (self.next != None)\n",
     "\n",
     "    def hasPrev(self):\n",
-    "        return (self.prev!=None)\n",
+    "        return (self.prev != None)\n",
     "\n",
     "    def setKey(self, key):\n",
     "        self.key = key\n",
@@ -130,7 +161,7 @@
     "        self.next = p\n",
     "\n",
     "    def setPrev(self, p):\n",
-    "        self.prev =p\n",
+    "        self.prev = p\n",
     " \n",
     "    def setUp(self, p):\n",
     "        self.up = p\n",
@@ -170,13 +201,8 @@
     "        SLnode.setNext(p.getNext())\n",
     "        SLnode.setPrev(p)\n",
     "        p.setNext(SLnode)\n",
-    "        if SLnode.hasNext():\n",
-    "            SLnode.getNext().setPrev(SLnode)\n",
-    "        self.size() += 1\n",
-    "        if (self.leftDummy == p):\n",
-    "            self.leftDummy.setNext(SLnode)\n",
-    "        if (self.rightDummy.getPrev() == p):\n",
-    "            self.rightDummy.setPrev(SLnode)\n",
+    "        SLnode.getNext().setPrev(SLnode)\n",
+    "        self.increaseSize()\n",
     "        \n",
     "    '''\n",
     "    method print_List(self): print the content of the list\n",
@@ -184,13 +210,14 @@
     "    def print_List(self):\n",
     "        current = self.leftDummy\n",
     "        while (current != None):\n",
-    "            print(\"(%d,%s)\" %(current.getKey(), current.getItem()))\n",
+    "            print(\"(%d,%s)\" %(current.getKey(), current.getItem()), end=\"\")\n",
     "            current = current.getNext()\n",
-    "\n",
+    "        print()\n",
+    "        \n",
     "# Skip list definition: a list of lists is used\n",
     "class Skip_Lists:\n",
     "    def __init__(self):\n",
-    "        self.S=[SLlist()]\n",
+    "        self.S = [SLlist()]\n",
     "\n",
     "    def getLists(self):\n",
     "        return self.S\n",
@@ -204,7 +231,7 @@
     "        return len(self.S)\n",
     "\n",
     "    def isEmpty(self):\n",
-    "        return ((self.getHeight()==1) and (self.getSize()==0))\n",
+    "        return ((self.getHeight() == 1) and (self.getSize() == 0))\n",
     "\n",
     "    # Derive the top list in the skip list\n",
     "    def getTopList(self):\n",
@@ -215,44 +242,119 @@
     "    '''\n",
     "    # Derive the topleft node in the skip list\n",
     "    def getTopleft(self):\n",
-    "        return self.S[0].getleftDummy()\n",
+    "        return self.S[self.getHeight()-1].getleftDummy()\n",
     "        \n",
     "    '''\n",
     "    method addEmptyList(): padding the skip list when the number of copies of the inserted node\n",
     "    is more than the height of the current  skip list\n",
     "    '''\n",
     "    def addEmptyList(self):\n",
+    "        prev = self.getTopList()\n",
     "        self.S.append(SLlist())\n",
+    "        new = self.getTopList()\n",
+    "        new.getleftDummy().setDown(prev.getleftDummy())\n",
+    "        new.getrightDummy().setDown(prev.getrightDummy())\n",
+    "        prev.getleftDummy().setUp(new.getleftDummy())\n",
+    "        prev.getrightDummy().setUp(new.getrightDummy())\n",
     "        \n",
     "    '''\n",
     "    method search(node): search the skip list with the given node using the key\n",
     "    '''\n",
     "    def search(self, node):\n",
-    "        \n",
+    "        current = self.getTopleft()\n",
+    "\n",
+    "        while(current != None):\n",
+    "            if (current.getNext().getKey() < node.getKey()):\n",
+    "                current = current.getNext()\n",
+    "            elif (current.getNext().getKey() > node.getKey()):\n",
+    "                current = current.getDown()\n",
+    "            else:\n",
+    "                return current.getNext().getKey()\n",
+    "        return None\n",
     "        \n",
     "    '''\n",
     "    method delete(node): delete the given node from the skip list\n",
     "    '''\n",
     "    def delete(self, node):\n",
-    "\n",
+    "        current = self.getTopleft()\n",
+    "        level = self.getHeight() - 1\n",
+    "        S = self.getLists()\n",
     "        \n",
+    "        while (current != None):\n",
+    "            if (current.getNext().getKey() < node.getKey()):\n",
+    "                current = current.getNext()\n",
+    "            elif (current.getNext().getKey() > node.getKey()):\n",
+    "                current = current.getDown()\n",
+    "                level -= 1\n",
+    "            else:\n",
+    "                    current = current.getNext()\n",
+    "                    break\n",
+    "        if (current == None):\n",
+    "            print(\"Key not found in the skip lists and will not perform the deletion\")\n",
+    "        \n",
+    "        while (current != None):\n",
+    "            current.getPrev().setNext(current.getNext())\n",
+    "            current.getNext().setPrev(current.getPrev())\n",
+    "            current.setNext(None)\n",
+    "            current.setPrev(None)\n",
+    "            current.setUp(None)\n",
+    "            nextone = current.getDown()             \n",
+    "            current.setDown(None)\n",
+    "            current = nextone\n",
+    "            S[level].decreaseSize()\n",
+    "            if (S[level].getSize() == 0):\n",
+    "                S.pop()\n",
+    "            level -= 1\n",
+    "\n",
     "    '''\n",
     "    method insert(node): insert the given node to the skip list\n",
     "    '''\n",
     "    def insert(self, node):\n",
-    "\n",
-    "\n",
+    "        S = self.getLists()\n",
+    "        number = coin_tossing() #正面次數\n",
+    "        \n",
+    "        prevnode = None\n",
+    "        \n",
+    "        for i in range(0, number + 1): #0~number\n",
+    "            if (i == self.getHeight()):\n",
+    "                self.addEmptyList()\n",
+    "                \n",
+    "            current = S[i].getleftDummy()\n",
+    "            while(current != None):\n",
+    "                if (current.getNext().getKey() < node.getKey()):\n",
+    "                    current = current.getNext()\n",
+    "                elif (current.getNext().getKey() == node.getKey()):\n",
+    "                    print(\"Key found in the skip lists and will not inert the new node\")\n",
+    "                    return\n",
+    "                else:\n",
+    "                    S[i].insertAfter(current, SLnode(node.getKey(), node.getItem()))\n",
+    "                    current.getNext().setDown(prevnode)\n",
+    "                    if (prevnode != None):\n",
+    "                        prevnode.setUp(current.getNext())\n",
+    "                    prevnode = current.getNext()\n",
+    "                    break\n",
+    "        if (self.getTopList().getSize() != 0):\n",
+    "            self.addEmptyList()\n",
     "'''\n",
     "function for coin tossing with the number of heads returned\n",
     "'''\n",
     "def coin_tossing():\n",
-    "\n",
+    "    counter = 0\n",
+    "    coin = random.randint(0,1)\n",
+    "    while (coin != 0):\n",
+    "        counter += 1\n",
+    "        coin = random.randint(0,1)\n",
+    "    return counter\n",
     "    \n",
     "'''\n",
     "function for reading lines (entries) in the input text file into a list of strings\n",
     "'''\n",
     "def read_lines():\n",
-    "\n",
+    "    file = open(\"/home/guyleaf/Desktop/DS-Homework/HW4/inFile-2.txt\", \"r\")\n",
+    "    string = file.read()\n",
+    "    strings = string.split('\\n')\n",
+    "    file.close()\n",
+    "    return strings\n",
     "    \n",
     "'''\n",
     "function for starting the task\n",
@@ -327,6 +429,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -345,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
