Change File Name

--- a/HW4/HW4_107590037.ipynb
+++ b/HW4/HW4_107590037.ipynb
@@ -29,84 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "['10 mary', '35 mars', '50 lowe', '25 john']\n",
-      "-----------------------------------------------\n",
-      "(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(99999,)\n",
-      "(-99999,)(35,mars)(50,lowe)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(99999,)\n",
-      "Insert (88, luke)\n",
-      "(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(35,mars)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(99999,)\n",
-      "delete (40, kite)\n",
-      "Key not found in the skip lists and will not perform the deletion\n",
-      "(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(35,mars)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(99999,)\n",
-      "Insert (27, eric)\n",
-      "(-99999,)(10,mary)(25,john)(27,eric)(35,mars)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(27,eric)(35,mars)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(27,eric)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(99999,)\n",
-      "delete (45, lisa)\n",
-      "Key not found in the skip lists and will not perform the deletion\n",
-      "(-99999,)(10,mary)(25,john)(27,eric)(35,mars)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(27,eric)(35,mars)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(27,eric)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(99999,)\n",
-      "delete (27, luis)\n",
-      "(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(35,mars)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(99999,)\n",
-      "delete (8, kids)\n",
-      "Key not found in the skip lists and will not perform the deletion\n",
-      "(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(35,mars)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(88,luke)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(99999,)\n",
-      "delete (88, luke)\n",
-      "(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(99999,)\n",
-      "(-99999,)(35,mars)(50,lowe)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(50,lowe)(99999,)\n",
-      "(-99999,)(99999,)\n"
-     ]
+     "text": "['27 luis', '8 kids', '40 kite']\n-----------------------------------------------\n(-99999,)(8,kids)(27,luis)(40,kite)(99999,)\n(-99999,)(8,kids)(99999,)\n(-99999,)(99999,)\nInsert (88, luke)\n(-99999,)(8,kids)(27,luis)(40,kite)(88,luke)(99999,)\n(-99999,)(8,kids)(88,luke)(99999,)\n(-99999,)(88,luke)(99999,)\n(-99999,)(99999,)\ndelete (40, kite)\n(-99999,)(8,kids)(27,luis)(88,luke)(99999,)\n(-99999,)(8,kids)(88,luke)(99999,)\n(-99999,)(88,luke)(99999,)\n(-99999,)(99999,)\nInsert (27, eric)\nKey found in the skip lists and will not inert the new node\n(-99999,)(8,kids)(27,luis)(88,luke)(99999,)\n(-99999,)(8,kids)(88,luke)(99999,)\n(-99999,)(88,luke)(99999,)\n(-99999,)(99999,)\ndelete (45, lisa)\nKey not found in the skip lists and will not perform the deletion\n(-99999,)(8,kids)(27,luis)(88,luke)(99999,)\n(-99999,)(8,kids)(88,luke)(99999,)\n(-99999,)(88,luke)(99999,)\n(-99999,)(99999,)\ndelete (27, luis)\n(-99999,)(8,kids)(88,luke)(99999,)\n(-99999,)(8,kids)(88,luke)(99999,)\n(-99999,)(88,luke)(99999,)\n(-99999,)(99999,)\ndelete (8, kids)\n(-99999,)(88,luke)(99999,)\n(-99999,)(88,luke)(99999,)\n(-99999,)(88,luke)(99999,)\n(-99999,)(99999,)\ndelete (88, luke)\n(-99999,)(99999,)\n"
     }
    ],
    "source": [
@@ -350,7 +279,7 @@
     "function for reading lines (entries) in the input text file into a list of strings\n",
     "'''\n",
     "def read_lines():\n",
-    "    file = open(\"/home/guyleaf/Desktop/DS-Homework/HW4/inFile-2.txt\", \"r\")\n",
+    "    file = open(\"inFile.txt\", \"r\")\n",
     "    string = file.read()\n",
     "    strings = string.split('\\n')\n",
     "    file.close()\n",
@@ -422,27 +351,6 @@
     "print('-----------------------------------------------')\n",
     "create_SkipLists()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -461,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
