--- a/HW4/HW4_107590037.ipynb
+++ b/HW4/HW4_107590037.ipynb
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "['27 luis', '8 kids', '40 kite']\n-----------------------------------------------\n(-99999,)(8,kids)(27,luis)(40,kite)(99999,)\n(-99999,)(8,kids)(99999,)\n(-99999,)(99999,)\nInsert (88, luke)\n(-99999,)(8,kids)(27,luis)(40,kite)(88,luke)(99999,)\n(-99999,)(8,kids)(88,luke)(99999,)\n(-99999,)(88,luke)(99999,)\n(-99999,)(99999,)\ndelete (40, kite)\n(-99999,)(8,kids)(27,luis)(88,luke)(99999,)\n(-99999,)(8,kids)(88,luke)(99999,)\n(-99999,)(88,luke)(99999,)\n(-99999,)(99999,)\nInsert (27, eric)\nKey found in the skip lists and will not inert the new node\n(-99999,)(8,kids)(27,luis)(88,luke)(99999,)\n(-99999,)(8,kids)(88,luke)(99999,)\n(-99999,)(88,luke)(99999,)\n(-99999,)(99999,)\ndelete (45, lisa)\nKey not found in the skip lists and will not perform the deletion\n(-99999,)(8,kids)(27,luis)(88,luke)(99999,)\n(-99999,)(8,kids)(88,luke)(99999,)\n(-99999,)(88,luke)(99999,)\n(-99999,)(99999,)\ndelete (27, luis)\n(-99999,)(8,kids)(88,luke)(99999,)\n(-99999,)(8,kids)(88,luke)(99999,)\n(-99999,)(88,luke)(99999,)\n(-99999,)(99999,)\ndelete (8, kids)\n(-99999,)(88,luke)(99999,)\n(-99999,)(88,luke)(99999,)\n(-99999,)(88,luke)(99999,)\n(-99999,)(99999,)\ndelete (88, luke)\n(-99999,)(99999,)\n"
+     "text": "['10 mary', '35 mars', '50 lowe', '25 john']\n-----------------------------------------------\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(99999,)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(99999,)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(99999,)\nInsert (88, luke)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(99999,)\ndelete (40, kite)\nKey not found in the skip lists and will not perform the deletion\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(99999,)\nInsert (27, eric)\n(-99999,)(10,mary)(25,john)(27,eric)(35,mars)(50,lowe)(88,luke)(99999,)\n(-99999,)(10,mary)(25,john)(27,eric)(35,mars)(50,lowe)(88,luke)(99999,)\n(-99999,)(10,mary)(25,john)(27,eric)(35,mars)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(99999,)\ndelete (45, lisa)\nKey not found in the skip lists and will not perform the deletion\n(-99999,)(10,mary)(25,john)(27,eric)(35,mars)(50,lowe)(88,luke)(99999,)\n(-99999,)(10,mary)(25,john)(27,eric)(35,mars)(50,lowe)(88,luke)(99999,)\n(-99999,)(10,mary)(25,john)(27,eric)(35,mars)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(99999,)\ndelete (27, luis)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(99999,)\ndelete (8, kids)\nKey not found in the skip lists and will not perform the deletion\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(88,luke)(99999,)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(99999,)\ndelete (88, luke)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(99999,)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(99999,)\n(-99999,)(10,mary)(25,john)(35,mars)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(50,lowe)(99999,)\n(-99999,)(99999,)\n"
     }
    ],
    "source": [
@@ -56,6 +56,11 @@
     "        self.next = None\n",
     "        self.prev = None\n",
     "    \n",
+    "    def __eq__(self, node):\n",
+    "        if not isinstance(node, SLnode):\n",
+    "            return False\n",
+    "        return node.getKey() == self.key and node.getItem() == self.item\n",
+    "\n",
     "    def getKey(self):\n",
     "        return self.key\n",
     "\n",
@@ -164,14 +169,14 @@
     "\n",
     "    # Derive the top list in the skip list\n",
     "    def getTopList(self):\n",
-    "        return self.S[self.getHeight()-1]\n",
+    "        return self.S[-1]\n",
     "\n",
     "    '''\n",
     "    method getTopleft(self): get the topleft node in the skip list\n",
     "    '''\n",
     "    # Derive the topleft node in the skip list\n",
     "    def getTopleft(self):\n",
-    "        return self.S[self.getHeight()-1].getleftDummy()\n",
+    "        return self.S[-1].getleftDummy()\n",
     "        \n",
     "    '''\n",
     "    method addEmptyList(): padding the skip list when the number of copies of the inserted node\n",
@@ -198,7 +203,7 @@
     "            elif (current.getNext().getKey() > node.getKey()):\n",
     "                current = current.getDown()\n",
     "            else:\n",
-    "                return current.getNext().getKey()\n",
+    "                return current.getNext()\n",
     "        return None\n",
     "        \n",
     "    '''\n",
@@ -216,10 +221,12 @@
     "                current = current.getDown()\n",
     "                level -= 1\n",
     "            else:\n",
-    "                    current = current.getNext()\n",
-    "                    break\n",
+    "                current = current.getNext()\n",
+    "                break\n",
+    "\n",
     "        if (current == None):\n",
     "            print(\"Key not found in the skip lists and will not perform the deletion\")\n",
+    "            return\n",
     "        \n",
     "        while (current != None):\n",
     "            current.getPrev().setNext(current.getNext())\n",
@@ -234,36 +241,47 @@
     "            if (S[level].getSize() == 0):\n",
     "                S.pop()\n",
     "            level -= 1\n",
+    "        if (len(S) == 0):\n",
+    "            self.addEmptyList()\n",
     "\n",
     "    '''\n",
     "    method insert(node): insert the given node to the skip list\n",
     "    '''\n",
     "    def insert(self, node):\n",
+    "        if (self.search(node) != None):\n",
+    "            print(\"Key found in the skip lists and will not insert the new node\")\n",
+    "            return\n",
     "        S = self.getLists()\n",
     "        number = coin_tossing() #正面次數\n",
     "        \n",
-    "        prevnode = None\n",
+    "        current = S[0].getleftDummy()\n",
+    "\n",
+    "        while (current.getNext() != None):\n",
+    "            if (current.getNext().getKey() > node.getKey()):\n",
+    "                S[0].insertAfter(current, SLnode(node.getKey(), node.getItem()))\n",
+    "                lastInsertedNode = current.getNext()\n",
+    "                break\n",
+    "            current = current.getNext()\n",
     "        \n",
-    "        for i in range(0, number + 1): #0~number\n",
-    "            if (i == self.getHeight()):\n",
-    "                self.addEmptyList()\n",
-    "                \n",
-    "            current = S[i].getleftDummy()\n",
-    "            while(current != None):\n",
-    "                if (current.getNext().getKey() < node.getKey()):\n",
-    "                    current = current.getNext()\n",
-    "                elif (current.getNext().getKey() == node.getKey()):\n",
-    "                    print(\"Key found in the skip lists and will not inert the new node\")\n",
-    "                    return\n",
+    "        level = 1\n",
+    "        while (number != 0):\n",
+    "            if (current.getUp() != None):\n",
+    "                S[level].insertAfter(current.getUp(), SLnode(node.getKey(), node.getItem()))\n",
+    "                current.getUp().getNext().setDown(lastInsertedNode)\n",
+    "                lastInsertedNode.setUp(current.getUp().getNext())\n",
+    "                current = current.getUp()\n",
+    "                lastInsertedNode = current.getNext()\n",
+    "                number -= 1\n",
+    "                level += 1\n",
+    "            else:\n",
+    "                if (current == self.getTopleft()):\n",
+    "                    self.addEmptyList()\n",
     "                else:\n",
-    "                    S[i].insertAfter(current, SLnode(node.getKey(), node.getItem()))\n",
-    "                    current.getNext().setDown(prevnode)\n",
-    "                    if (prevnode != None):\n",
-    "                        prevnode.setUp(current.getNext())\n",
-    "                    prevnode = current.getNext()\n",
-    "                    break\n",
-    "        if (self.getTopList().getSize() != 0):\n",
+    "                    current = current.getPrev()\n",
+    "        \n",
+    "        if (S[-1].getSize() != 0):\n",
     "            self.addEmptyList()\n",
+    "        \n",
     "'''\n",
     "function for coin tossing with the number of heads returned\n",
     "'''\n",
@@ -279,7 +297,7 @@
     "function for reading lines (entries) in the input text file into a list of strings\n",
     "'''\n",
     "def read_lines():\n",
-    "    file = open(\"inFile.txt\", \"r\")\n",
+    "    file = open(\"C:\\\\Users\\\\ychhu\\\\Desktop\\\\ipython\\\\DS-Homework\\\\HW4\\\\inFile-2.txt\", \"r\")\n",
     "    string = file.read()\n",
     "    strings = string.split('\\n')\n",
     "    file.close()\n",
